--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bmore Jr Devs",
+  "name": "bmorejrdevs",
   "description": "TBD",
   "repository": "https://github.com/heroku",
   "keywords": ["node", "express"]
