--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "TBD",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "morgan": "^1.5.0",
+    "body-parser": "^1.10.0",
+    "method-override": "^2.3.0",
+    "pg": "^4.1.0"
   },
   "engines": {
     "node": "0.10.x"
