--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "body-parser": "^1.10.0",
     "method-override": "^2.3.0",
     "pg": "^4.1.0",
-    "jade": "^1.9.1"
+    "ejs": "2.2.3"
   },
   "engines": {
     "node": "0.10.x"
